bulma/layout/header.sass
.header
  +clearfix
  background: white
  box-shadow: 0 1px 2px rgba(black, 0.1)
  display: flex
  height: 50px
  line-height: 24px
  position: relative
  text-align: center
  z-index: 2
  .container
    align-items: stretch
    box-shadow: 0 1px 0 rgba($border, 0.3)
    display: flex
    width: 100%
  +tablet
    height: $header-height

.header-toggle
  @extend .hamburger
  +tablet
    display: none

// Elements

.header-item
  align-items: center
  display: flex
  padding: 10px
  img
    max-height: 24px
  a
    color: $text
    &:hover
      color: $link-hover
    &.is-active
      color: $link-active
  .fa
    font-size: 21px
    line-height: 24px

.header-icon
  +fa(14px, 24px)
  color: $text
  margin: 0 5px
  &:hover
    color: $link-hover

.header-tab
  align-items: center
  border-bottom: 1px solid transparent
  color: $text
  display: block
  height: $header-height
  line-height: 24px
  padding: 13px 15px
  &:hover
    border-bottom: 1px solid $link
  &.is-active
    border-bottom: 3px solid $link
    color: $link

// Containers

.header-left
  align-items: stretch
  display: flex
  flex: 1
  overflow: hidden
  overflow-x: auto
  white-space: nowrap
  +desktop
    .header-item:first-child
      padding-left: 0

.header-center
  align-items: stretch
  display: flex
  left: 50%
  position: absolute
  transform: translateX(-50%)

.header-right
  align-items: stretch
  +tablet
    display: flex
  +desktop
    .header-item:last-child
      padding-right: 0

.header-full
  align-items: stretch
  display: flex
  justify-content: center
  text-align: center
  width: 100%
  & > .header-item
    align-items: stretch
    display: flex
    flex: 1
    justify-content: center
    padding: 0
    & > a
      align-items: center
      display: flex
      justify-content: center
      width: 100%

.header-menu
  +mobile
    background: white
    box-shadow: 0 4px 7px rgba(black, 0.1)
    display: none
    min-width: 120px
    position: absolute
    right: 0
    top: 50px
    z-index: 100
    .header-item
      border-top: 1px solid rgba($border, 0.5)
      padding: 10px
    &.is-active
      display: block

// States

.header.is-centered
  justify-content: center
  .header-left,
  .header-center,
  .header-right
    justify-content: center

.header.is-small
  background: $background
  box-shadow: none
  height: 40px
  z-index: 1
  .container
    height: 40px
  .header-tab
    font-size: 13px
    height: 40px
    padding: 8px 10px
    &:hover,
    &.is-active
      border-bottom-width: 2px

